fix: fix scrollbar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,24 +20,26 @@ body {
   color: var(--foreground);
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 8px;
-}
+@media screen and (min-width: 720px) {
+    /* width */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
 
-/* Track */
-::-webkit-scrollbar-track {
-  @apply bg-neutral-100 dark:bg-neutral-600 rounded-r-full
-}
+    /* Track */
+    ::-webkit-scrollbar-track {
+      @apply bg-neutral-100 dark:bg-neutral-600
+    }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  @apply bg-neutral-300 dark:bg-neutral-700 rounded-full
-}
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      @apply bg-neutral-300 dark:bg-neutral-700 rounded-full
+    }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  @apply bg-neutral-400 dark:bg-neutral-800
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+      @apply bg-neutral-400 dark:bg-neutral-800
+    } 
 }
 
 input::-webkit-outer-spin-button,
